add gochujang recipe page

--- a/index.html
+++ b/index.html
@@ -1,9 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+        <meta charset="UTF-8">
         <title>Micki's Greatest 100/10 recipes A+++</title>
     </head>
     <body>
          <h1>Odin Recipes</h1>
+        <ul>
+            <li><a href="recipes/gochujang-noods.html">Gochujang noodles</a></li>
+        </ul>
     </body>
 </html>
