add corn cheese

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
          <h1>Odin Recipes</h1>
         <ul>
             <li><a href="recipes/gochujang-noods.html">Gochujang noodles</a></li>
+            <li><a href="recipes/corn-cheez.html"> Corn cheese</a></li>
         </ul>
     </body>
 </html>
