--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     </head>
     <body>
          <h1>Odin Recipes</h1>
+         <img src="https://cdn.pixabay.com/photo/2016/03/31/14/49/book-1292854_960_720.png" alt="recipe book>"
         <ul>
             <li><a href="recipes/gochujang-noods.html">Gochujang noodles</a></li>
             <li><a href="recipes/corn-cheez.html"> Corn cheese</a></li>
