--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
          <h1>Odin Recipes</h1>
          <img src="https://cdn.pixabay.com/photo/2016/03/31/14/49/book-1292854_960_720.png" width= 250 alt="recipe book">
          <p>Welcome to my recipe book of quick, simple recipes for those with limited time or are new to cooking. </p>
-         <p> These recipes are carefully curated from a critically renowned app known for its vast amopunt of knowledge-Tik Tok. Enjoy.
+         <p> These recipes are carefully curated from a critically renowned app known for its vast amount of knowledge-Tik Tok. Enjoy.
         <ul>
             <li><a href="recipes/gochujang-noods.html">Gochujang noodles</a></li>
             <li><a href="recipes/corn-cheez.html"> Corn cheese</a></li>
