--- a/recipes/chili.html
+++ b/recipes/chili.html
@@ -5,7 +5,7 @@
             <title>Chili noodles</title>
     </head>
         <body>
-            <h1>Spicy Garlic Chili Oil Noodles/h1>
+            <h1>Spicy Garlic Chili Oil Noodles</h1>
                 <p>
                     Perfect 10 min meal. If you enjoyed the simplicity of the Gochujang noodles recipe, this recipe follows suit in needing minimal ingredients while still remaining delicious! Unlike all the other recipes in this book, this one actually has measurements. Crazy, I know.
                 </p>
@@ -23,7 +23,7 @@
                     <li>Mix chili oik, rice vinegar, soy sauce, and sugar together</li>
                     <li>Boil noodles until ready or according to package instructions</li>
                     <li>Drain noodles and add sauce mixture on top</li>
-                    >li>Add garnish
+                    <li>Add garnish</li>
                 </ol>
         </body>
 </html>
