Add finishing touches on chili

--- a/recipes/chili.html
+++ b/recipes/chili.html
@@ -18,6 +18,7 @@
                     <li>2 tsp soy sauce</li>
                     <li>1 serving of Chinese hand pulled noodles</li>
                     <li>Garnish of choice</li>
+                    <li>Garlic</li>
                 </ul>
             <h2>Steps</h2>
                 <ol>
@@ -26,5 +27,8 @@
                     <li>Drain noodles and add sauce mixture on top</li>
                     <li>Add garnish</li>
                 </ol>
+                <p>
+                    And that's it! Super quick meal that's easy to make for after class or after a breakup and you need a simple distraction 😊
+                </p>
         </body>
 </html>
