--- a/recipes/chili.html
+++ b/recipes/chili.html
@@ -22,7 +22,7 @@
                 </ul>
             <h2>Steps</h2>
                 <ol>
-                    <li>Mix chili oik, rice vinegar, soy sauce, and sugar together</li>
+                    <li>Mix chili oil, rice vinegar, soy sauce, and sugar together</li>
                     <li>Boil noodles until ready or according to package instructions</li>
                     <li>Drain noodles and add sauce mixture on top</li>
                     <li>Add garnish</li>
