add return to home page

--- a/recipes/chili.html
+++ b/recipes/chili.html
@@ -30,5 +30,6 @@
                 <p>
                     And that's it! Super quick meal that's easy to make for after class or after a breakup and you need a simple distraction 😊
                 </p>
+                <p><a href="../index.html">Return home</a></p>
         </body>
 </html>
