--- a/recipes/corn-cheez.html
+++ b/recipes/corn-cheez.html
@@ -33,5 +33,6 @@
                 <li>Top with mozzarella cheese and garnish</li>
             </ol>
             <p> <a href="https://www.tiktok.com/@schmoyoho/video/7133362838424341803?is_from_webapp=v1&item_id=7133362838424341803&lang=en"><img src="https://c.tenor.com/qMwkf5-URSQAAAAM/corntastic-corntastic-day.gif" alt="tik tok GIF of child proclaiming his love for corn"></a></p>
-    </body>
+            <a href="../index.html">Return home</a> 
+        </body>
 </html>
