--- a/recipes/gochujang-noods.html
+++ b/recipes/gochujang-noods.html
@@ -48,5 +48,6 @@
                         <img src="https://wallpaperaccess.com/full/1556608.jpg" height =200 width =900 alt="white background pic">
                         <img src="https://img.freepik.com/premium-vector/noodle-bowl-asia-food_52422-141.jpg?w=2000" width =200 alt="bowl of udon noodles">
             </p>
+            <a href="../index.html">Return home</a> 
             </body>
 </html>
