add CSS elements

--- a/index.html
+++ b/index.html
@@ -3,15 +3,18 @@
     <head>
         <meta charset="UTF-8">
         <title>Micki's Greatest 100/10 recipes A+++</title>
+        <link rel="stylesheet" href="styles.CSS">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Nabla">
     </head>
     <body>
-         <h1>Odin Recipes</h1>
+         <h1 class="title">Odin Recipes</h1>
          <img src="https://cdn.pixabay.com/photo/2016/03/31/14/49/book-1292854_960_720.png" width= 250 alt="recipe book">
          <p>Welcome to my recipe book of quick, simple recipes for those with limited time or are new to cooking. </p>
          <p> These recipes are carefully curated from a critically renowned app known for its vast amount of knowledge-Tik Tok. Enjoy.
         <ul>
             <li><a href="recipes/gochujang-noods.html">Gochujang noodles</a></li>
             <li><a href="recipes/corn-cheez.html"> Corn cheese</a></li>
+            <li><a href="recipes/chili.html">Spicy garlic chili oil noodles</a></li>
         </ul>
         </p>
     </body>
