--- a/recipes/chili.html
+++ b/recipes/chili.html
@@ -3,6 +3,16 @@
     <head>
             <meta charset="utf -8">
             <title>Chili noodles</title>
+            <style>
+                .button {
+                   color: blue;
+                padding: 5px;
+
+                }
+                button {
+                    background-color: blanchedalmond;
+                }
+            </style>
     </head>
         <body>
             <h1>Spicy Garlic Chili Oil Noodles</h1>
@@ -30,6 +40,6 @@
                 <p>
                     And that's it! Super quick meal that's easy to make for after class or after a breakup and you need a simple distraction 😊
                 </p>
-                <p><a href="../index.html">Return home</a></p>
+                <p class="button"><button><a href="../index.html">Return home</a></button></p>
         </body>
 </html>
